--- a/main.html
+++ b/main.html
@@ -1,90 +1,49 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<style>
-  form {
-    font-family: Arial, sans-serif;
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        /* Add your CSS styles here to make the form visually appealing */
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f4f4f4;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
 
-  h1 {
-    text-align: center;
-    color: #333;
-  }
-
-  label {
-    display: block;
-    margin-bottom: 10px;
-  }
-
-  input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-
-  input[type="checkbox"] {
-    margin-right: 10px;
-  }
-
-  select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-
-  option {
-    padding: 5px;
-  }
-
-  input[type="submit"] {
-    display: block;
-    width: 200px;
-    margin: 20px auto;
-    padding: 10px;
-    background-color: #333;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-</style>
+    </style>
+    <title>Dog Adoption Application</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<form>
-<h1>Dog Adoption Application</h1>
-<label for="name">Name</label>
-<input type="text" id="name" name="name" placeholder="Name" required>
-<label for="phone">Phone Number</label>
-<input type="text" id="phone" name="phone" placeholder="Phone Number" required>
-<label for="address">Address</label>
-<input type="text" id="address" name="address" placeholder="Address" required>
-<label for="checkbox"><input type="checkbox" id="checkbox" name="checkbox">Have you ever lived with a Dog before?</label>
-<label for="multiSelect">Please select your preferred breeds</label>
-<select id="multiSelect" name="multiSelect" multiple required>
-<option value="Labrador Retriever">Labrador Retriever</option>
-<option value="German Shepherd">German Shepherd</option>
-<option value="Golden Retriever">Golden Retriever</option>
-<option value="Beagle">Beagle</option>
-<option value="Poodle">Poodle</option>
-<option value="Bulldog">Bulldog</option>
-</select>
-<input type="submit" id="submit" name="submit" value="Submit">
-</form>
-	
-    <script type="text/javascript" src="./script.js">
-</script>
+    <form action="#" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Name" required><br><br>
 
+        <label for="phone">Phone Number:</label>
+        <input type="text" id="phone" name="phone" placeholder="Phone Number" required><br><br>
+
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" placeholder="Address" required><br><br>
+
+        <label>Have you ever lived with a Dog before?</label>
+        <input type="checkbox" id="dogExperience" name="dogExperience" value="Have you ever lived with a Dog before?" required><br><br>
+
+        <label for="breeds">Please select your preferred breeds (select at least 3):</label>
+        <select id="breeds" name="breeds[]" multiple="multiple" required>
+            <option value="Golden Retriever">Golden Retriever</option>
+            <option value="Labrador Retriever">Labrador Retriever</option>
+            <option value="German Shepherd">German Shepherd</option>
+            <option value="Bulldog">Bulldog</option>
+            <option value="Poodle">Poodle</option>
+            <option value="Beagle">Beagle</option>
+            <option value="Boxer">Boxer</option>
+            <option value="Other">Other (Specify)</option>
+        </select><br><br>
+
+        <input type="submit" value="Submit">
+    </form>
 </body>
-
 </html>
